# raindrop

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  main.pri  main.qbs  raindrop.pro  raindrop.qbs
cmake/: app.cmake  plugins.cmake  shared.cmake
doc/: README  main.qbs
scripts/: clean.bat  dependdll.cmd  version.bat  version.sh
share/: README
src/: CMakeLists.txt  main.qbs  src.pri  src.pro  src.qbs
src/app/raindrop/: CMakeLists.txt  main.cpp  raindrop.pro  raindrop.qbs  raindrop.qrc
src/interfaces/: CMakeLists.txt  iclipboardelement.h  iclipboarditem.h  iclipboardstack.h  idatabaseattr.h  idatabaseattribute.h  idatabaseclass.h  idatabasecomposition.h  idatabaseconnect.h  idatabaseexpression.h  idatabasefilter.h  idatabaseitem.h  idatabaselist.h  idatabasemanipulation.h  idatabasemodel.h  idatabasemodelbuilder.h  idatabasemodelmanager.h  idatabaseobject.h  idatabaseobjects.h  idatabasepool.h  idatabaserole.h  idatabasethread.h  imainwindow.h  imdiextarea.h  interfaces.pro  interfaces.qbs  itreedockwidget.h  iundogroup.h  mainwindow.h
src/libs/filtertreewidget/: CMakeLists.txt  filtertreewidget.cpp  filtertreewidget.h  filtertreewidget.pro  filtertreewidget.qbs  filtertreewidgetglobal.h
src/libs/filtertreewidget/include/filtertreewidget/: filtertreewidget.h
src/libs/metadatamodel/: CMakeLists.txt  classmodelxml.cpp  classmodelxml.h  clogging.cpp  clogging.h  dbxmlstruct.h  metadatamodel.pro  metadatamodel.qbs  metadatamodel.qrc  metadatamodelglobal.h
src/libs/metadatamodel/include/metadatamodel/: classmodelxml.h  dbxmlstruct.h
src/plugins/: CMakeLists.txt  README  main.qbs  plugins.pri  plugins.pro  plugins.qbs
src/plugins/clipboardstack/: CMakeLists.txt  clipboardstack.cpp  clipboardstack.h  clipboardstack.pro  clipboardstack.qbs  clipboardstack.qrc  clipboardstackglobal.h
src/plugins/databasemodel/: databasemodel.cpp  databasemodel.h  databasemodel.pro  databasemodel.qbs  databasemodelglobal.h
src/plugins/databasemodelmanager/: CMakeLists.txt  databasemodelmanager.cpp  databasemodelmanager.h  databasemodelmanager.pro  databasemodelmanager.qbs  databasemodelmanager.qrc  databasemodelmanagerglobal.h  databasepool.cpp  databasepool.h
src/plugins/dbconnect/: CMakeLists.txt  dbconnect.cpp  dbconnect.h  dbconnect.pro  dbconnect.qbs  dbconnect.qrc  dbconnectglobal.h  dialogconnect.cpp  dialogconnect.h  dialogconnect.ui  threadconnect.cpp  threadconnect.h
src/plugins/dbmodelexample/: CMakeLists.txt  clogging.cpp  clogging.h  dbmodelexample.cpp  dbmodelexample.h  dbmodelexample.pro  dbmodelexample.qbs  dbmodelexample.qrc  dbmodelexampleglobal.h
src/plugins/example/: CMakeLists.txt  example.pro  example.qbs  example.qrc  exampleglobal.h  exampleplug.cpp  exampleplug.h
src/plugins/mainwindow/: CMakeLists.txt  actiongroupmodel.cpp  actiongroupmodel.h  actiongrouptreeview.cpp  actiongrouptreeview.h  actionprop.cpp  actionprop.h  actionprop.ui  hotkeydelegate.cpp  hotkeydelegate.h  hotkeylineedit.cpp  hotkeylineedit.h  iconsizespinbox.cpp  iconsizespinbox.h  listview.cpp  listview.h  mainwindow.cpp  mainwindow.h  mainwindow.pro  mainwindow.qbs  mainwindow.qrc  mainwindow.ui  mainwindowglobal.h  mainwindowoptions.cpp  mainwindowoptions.h  mainwindowoptions.ui  mainwindowplug.cpp  mainwindowplug.h  mainwindowplugin.cpp  mainwindowplugin.h  mdiextarea.cpp  mdiextarea.h  mdisubwindow.cpp  mdisubwindow.h  menu.cpp  menu.h  menubar.cpp  menubar.h  mimedataobject.cpp  mimedataobject.h  (+7 more)
src/plugins/modeleride/: CMakeLists.txt  abstracteditorwidget.cpp  abstracteditorwidget.h  abstractitemwidget.cpp  abstractitemwidget.h  abstractlisteditorwidget.cpp  abstractlisteditorwidget.h  abstractmodifywidget.cpp  abstractmodifywidget.h  abstractpropeditor.cpp  abstractpropeditor.h  attrgroupproxymodel.cpp  attrgroupproxymodel.h  attrwidget.cpp  attrwidget.h  attrwidget.ui  classmodel.cpp  classmodel.h  classtreeview.cpp  classtreeview.h  classtreeview.ui  classwidget.cpp  classwidget.h  classwidget.ui  compositionpropwidget.cpp  compositionpropwidget.h  compositionpropwidget.ui  compositionwidget.cpp  compositionwidget.h  compositionwidget.ui  conditiondelegate.cpp  conditiondelegate.h  conditionproxymodel.cpp  conditionproxymodel.h  dbxmlstruct.h  dlgeditattr.cpp  dlgeditattr.h  dlgeditattr.ui  dlgeditclass.cpp  dlgeditclass.h  (+125 more)
src/plugins/modeleride/data/: system.xml  teststruct.xml
src/plugins/pgdatabasemodel/: CMakeLists.txt  clogging.cpp  clogging.h  pgdatabaseattr.cpp  pgdatabaseattr.h  pgdatabaseattribute.cpp  pgdatabaseattribute.h  pgdatabaseattrs.cpp  pgdatabaseattrs.h  pgdatabaseclass.cpp  pgdatabaseclass.h  pgdatabaseclasses.cpp  pgdatabaseclasses.h  pgdatabasecomposition.cpp  pgdatabasecomposition.h  pgdatabasecomps.cpp  pgdatabasecomps.h  pgdatabaseexpression.cpp  pgdatabaseexpression.h  pgdatabasefilter.cpp  pgdatabasefilter.h  pgdatabasefilters.cpp  pgdatabasefilters.h  pgdatabasehelper.cpp  pgdatabasehelper.h  pgdatabasemodel.cpp  pgdatabasemodel.h  pgdatabasemodel.pro  pgdatabasemodel.qbs  pgdatabasemodel.qrc  pgdatabasemodelbuilder.cpp  pgdatabasemodelbuilder.h  pgdatabasemodelglobal.h  pgdatabaseobject.cpp  pgdatabaseobject.h  pgdatabaseobjects.cpp  pgdatabaseobjects.h
src/plugins/sqleditor/: CMakeLists.txt  querysqlwidget.cpp  querysqlwidget.h  querysqlwidget.ui  sqleditor.cpp  sqleditor.h  sqleditor.pro  sqleditor.qbs  sqleditor.qrc  sqleditorglobal.h  sqlhighlighter.cpp  sqlhighlighter.h  textclipboarditem.cpp  textclipboarditem.h  undotextdocument.cpp  undotextdocument.h
src/plugins/stackediting/: stackediting.cpp  stackediting.h  stackediting.pro  stackediting.qbs  stackediting.qrc  stackeditingglobal.h
src/plugins/treecommands/: treecommands.pro  treecommandsplug.cpp  treecommandsplug.h
src/plugins/treedockwidget/: CMakeLists.txt  treedockwidget.cpp  treedockwidget.h  treedockwidget.pro  treedockwidget.qbs  treedockwidgetglobal.h  treefilterwidget.cpp  treefilterwidget.h  treefilterwidget.ui
src/plugins/undostack/: CMakeLists.txt  undostack.cpp  undostack.h  undostack.pro  undostack.qbs  undostack.qrc  undostackglobal.h
(+377 files in other folders)
