project(subprojects)

add_subdirectory(clipboardstack)
add_subdirectory(dbconnect)
add_subdirectory(example)
add_subdirectory(mainwindow)
add_subdirectory(modeleride)
add_subdirectory(sqleditor)
add_subdirectory(undostack)
add_subdirectory(treedockwidget)
add_subdirectory(databasemodelmanager)
add_subdirectory(dbmodelexample)
add_subdirectory(pgdatabasemodel)
